Woo! bunch of updates: * Added docker things * Added .env things * Added VSCode things * OH! made it so we can hydrate the client with server session * Had to add a render/template engine because session ^^ * Dont think ive ever had a mounting point that took props #yolo

--- a/server/main.hbs
+++ b/server/main.hbs
@@ -8,6 +8,9 @@
 </head>
 <body>
   <section id="root"></section>
-  {{{ body }}}
+  <script>var __SESSION__ = {{{session}}};</script>
+  <script type="text/javascript" src="/client.bundle.js"></script>
 </body>
 </html>
+
+
