Changed from yarn to npm, wtf
Adding docker-compose

Added lint/test

Fixed some environment issues

ignored .env

removed env

Added cypress and changed a bunch of circle stuff

Added more to gitignore

Added cypress

Fixed integration tests

Fixed integration tests

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -11,7 +11,7 @@
   <script>var __SESSION__ = {{{session}}};</script>
   {{#if clientAssets}}
     {{#each clientAssets}}
-    <script type="text/javascript" src="{{this}}" />
+    <script type="text/javascript" src="/dist{{this}}"></script>
     {{/each}}
   {{else}}
   <script type="text/javascript" src="/client.bundle.js"></script>
