--- a/server/index.hbs
+++ b/server/index.hbs
@@ -4,14 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React and Webpack4</title>
+  <title>Carpe Dalan</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+  <link rel="manifest" href="/public/site.webmanifest">
+  <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">  
 </head>
 <body>
   <section id="root"></section>
   <script>var __SESSION__ = {{{session}}};</script>
   {{#if clientAssets}}
     {{#each clientAssets}}
-    <script type="text/javascript" src="{{this}}" />
+    <script type="text/javascript" src="https://cdn.carpedalan.com{{this}}"></script>
     {{/each}}
   {{else}}
   <script type="text/javascript" src="/client.bundle.js"></script>
