Added archive modal

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -15,6 +15,7 @@
 </head>
 <body>
   <section id="root"></section>
+  <aside id="modal"></aside>
   <script>var __SESSION__ = {{{session}}};</script>
   {{#if clientAssets}}
     {{#each clientAssets}}
