--- a/server/index.hbs
+++ b/server/index.hbs
@@ -27,6 +27,18 @@
   {{else}}
   <script type="text/javascript" src="/client.bundle.js"></script>
   {{/if}}
+  {{#if isProd}}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133308117-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133308117-1');
+  </script>
+
+  {{/if}}
 </body>
 </html>
 
