--- a/server/index.hbs
+++ b/server/index.hbs
@@ -10,9 +10,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.carpedalan.com/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.carpedalan.com/favicon-16x16.png">
   <link rel="manifest" href="https://cdn.carpedalan.com/site.webmanifest">
-  <link rel="mask-icon" href="https://cdn.carpedalan.com/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">  
+  <link rel="mask-icon" href="https://cdn.carpedalan.com/safari-pinned-tab.svg" color="#f7cddb">
+  <meta name="msapplication-TileColor" content="#f7cddb">
+  <meta name="theme-color" content="#F7CDDB">
+
+
 </head>
 <body>
   <section id="root"></section>
