--- a/server/index.hbs
+++ b/server/index.hbs
@@ -6,6 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Carpe Dalan</title>
   <meta name="description" content="The Dalan family app" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.carpedalan.com/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.carpedalan.com/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://cdn.carpedalan.com/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://cdn.carpedalan.com/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://cdn.carpedalan.com/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://cdn.carpedalan.com/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://cdn.carpedalan.com/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://cdn.carpedalan.com/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-196x196.png" sizes="196x196" />
   <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-16x16.png" sizes="16x16" />
@@ -17,6 +26,10 @@
   <meta name="msapplication-square150x150logo" content="https://cdn.carpedalan.com/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="https://cdn.carpedalan.com/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="https://cdn.carpedalan.com/mstile-310x310.png" />
+  <link rel="manifest" href="https://cdn.carpedalan.com/site.webmanifest">
+  <link rel="mask-icon" href="https://cdn.carpedalan.com/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">  
 
 
 </head>
