--- a/server/index.hbs
+++ b/server/index.hbs
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="https://cdn.carpedalan.com/favicon-128.png" sizes="128x128" />
   <meta name="application-name" content="Carpe Dalan"/>
-  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="msapplication-TileImage" content="https://cdn.carpedalan.com/mstile-144x144.png" />
   <meta name="msapplication-square70x70logo" content="https://cdn.carpedalan.com/mstile-70x70.png" />
   <meta name="msapplication-square150x150logo" content="https://cdn.carpedalan.com/mstile-150x150.png" />
@@ -29,8 +29,16 @@
   <link rel="manifest" href="https://cdn.carpedalan.com/site.webmanifest">
   <link rel="mask-icon" href="https://cdn.carpedalan.com/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">  
-
+  <meta name="theme-color" content="#da532c">  
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.carpedalan.com/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.carpedalan.com/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.carpedalan.com/favicon-16x16.png">
+  <link rel="manifest" href="https://cdn.carpedalan.com/site.webmanifest">
+  <link rel="mask-icon" href="https://cdn.carpedalan.com/safari-pinned-tab.svg" color="#ffb0f5">
+  <meta name="apple-mobile-web-app-title" content="Carpe Dalan">
+  <meta name="application-name" content="Carpe Dalan">
+  <meta name="msapplication-TileColor" content="#ffb0f5">
+  <meta name="theme-color" content="#ffb0f5">
 
 </head>
 <body>
