--- a/server/index.hbs
+++ b/server/index.hbs
@@ -26,14 +26,13 @@
   <meta name="msapplication-square150x150logo" content="https://{{assetDomain}}/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="https://{{assetDomain}}/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="https://{{assetDomain}}/mstile-310x310.png" />
-  <link rel="manifest" href="https://{{assetDomain}}/site.webmanifest">
   <link rel="mask-icon" href="https://{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
   <meta name="msapplication-TileColor" content="#ffb0f5">
   <meta name="theme-color" content="#ffb0f5">  
   <link rel="apple-touch-icon" sizes="180x180" href="https://{{assetDomain}}/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://{{assetDomain}}/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://{{assetDomain}}/favicon-16x16.png">
-  <link rel="manifest" href="https://{{assetDomain}}/site.webmanifest">
+  {{!-- <link rel="manifest" href="https://{{assetDomain}}/site.webmanifest"> --}}
   <link rel="mask-icon" href="https://{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
   <meta name="apple-mobile-web-app-title" content="Carpe Dalan">
   <meta name="application-name" content="Carpe Dalan">
