Lots of cleanup, added PROD_BUILD to docker setup, added client build to server prod docker build

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -50,7 +50,7 @@
   </script>
   {{#if clientAssets}}
     {{#each clientAssets}}
-    <script type="text/javascript" src="https://{{this}}"></script>
+    <script type="text/javascript" src="{{this}}"></script>
     {{/each}}
   {{else}}
   <script type="text/javascript" src="//local.carpedalan.com/dist/client.bundle.js"></script>
