Another pass at the font

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -6,34 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Carpe Dalan</title>
   <meta name="description" content="The Dalan family app" />
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://{{assetDomain}}/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://{{assetDomain}}/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://{{assetDomain}}/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://{{assetDomain}}/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://{{assetDomain}}/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://{{assetDomain}}/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://{{assetDomain}}/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://{{assetDomain}}/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="https://{{assetDomain}}/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="https://{{assetDomain}}/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="https://{{assetDomain}}/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="https://{{assetDomain}}/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="https://{{assetDomain}}/favicon-128.png" sizes="128x128" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="//{{assetDomain}}/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="//{{assetDomain}}/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="//{{assetDomain}}/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="//{{assetDomain}}/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="//{{assetDomain}}/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="//{{assetDomain}}/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="//{{assetDomain}}/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="//{{assetDomain}}/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="//{{assetDomain}}/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="//{{assetDomain}}/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="//{{assetDomain}}/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="//{{assetDomain}}/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="//{{assetDomain}}/favicon-128.png" sizes="128x128" />
   <meta name="application-name" content="Carpe Dalan"/>
   <meta name="msapplication-TileColor" content="#ffb0f5" />
-  <meta name="msapplication-TileImage" content="https://{{assetDomain}}/mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="https://{{assetDomain}}/mstile-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="https://{{assetDomain}}/mstile-150x150.png" />
-  <meta name="msapplication-wide310x150logo" content="https://{{assetDomain}}/mstile-310x150.png" />
-  <meta name="msapplication-square310x310logo" content="https://{{assetDomain}}/mstile-310x310.png" />
-  <link rel="mask-icon" href="https://{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
+  <meta name="msapplication-TileImage" content="//{{assetDomain}}/mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="//{{assetDomain}}/mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="//{{assetDomain}}/mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="//{{assetDomain}}/mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="//{{assetDomain}}/mstile-310x310.png" />
+  <link rel="mask-icon" href="//{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
   <meta name="msapplication-TileColor" content="#ffb0f5">
   <meta name="theme-color" content="#ffb0f5">  
-  <link rel="apple-touch-icon" sizes="180x180" href="https://{{assetDomain}}/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://{{assetDomain}}/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://{{assetDomain}}/favicon-16x16.png">
-  {{!-- <link rel="manifest" href="https://{{assetDomain}}/site.webmanifest"> --}}
-  <link rel="mask-icon" href="https://{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
+  <link rel="apple-touch-icon" sizes="180x180" href="//{{assetDomain}}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="//{{assetDomain}}/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="//{{assetDomain}}/favicon-16x16.png">
+  {{!-- <link rel="manifest" href="//{{assetDomain}}/site.webmanifest"> --}}
+  <link rel="mask-icon" href="//{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
   <meta name="apple-mobile-web-app-title" content="Carpe Dalan">
   <meta name="application-name" content="Carpe Dalan">
   <meta name="msapplication-TileColor" content="#ffb0f5">
@@ -59,7 +59,7 @@
   {{#unless ci}}
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- Branch: {{branch}} - Build: {{buildNum}} - sha1 = {{sha1}}-->
-  {{!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133308117-1"></script> --}}
+  {{!-- <script async src="//www.googletagmanager.com/gtag/js?id=UA-133308117-1"></script> --}}
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
