Added dll config to webpack dev

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -57,6 +57,7 @@
     <script type="text/javascript" src="//{{../assetDomain}}/{{this}}"></script>
     {{/each}}
   {{else}}
+  <script type="text/javascript" src="//local.carpedalan.com/build/library/library.dll.js"></script>
   <script type="text/javascript" src="//local.carpedalan.com/dist/client.bundle.js"></script>
   {{/if}}
   {{#if isProd}}
