Added Client TS generation + deploy stuff * Added script to change TS client * Updated client code to use it * Removed NAT GATEWAYS!!!! This required VPC endpoints * Created new stack * Added Name to tags util

--- a/server/index.hbs
+++ b/server/index.hbs
@@ -62,6 +62,7 @@
   {{/if}}
   {{#if isProd}}
   {{#unless ci}}
+  <!-- IT WORKED -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- Branch: {{branch}} - Job: {{buildNum}} - sha1 = {{sha1}}-->
   {{!-- <script async src="//www.googletagmanager.com/gtag/js?id=UA-133308117-1"></script> --}}
