--- a/server/index.hbs
+++ b/server/index.hbs
@@ -62,7 +62,7 @@
   {{/if}}
   {{#if isProd}}
   {{#unless ci}}
-  <!-- IT WORKED -->
+  <!-- IT WORKED AGAIN, Again... -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- Branch: {{branch}} - Job: {{buildNum}} - sha1 = {{sha1}}-->
   {{!-- <script async src="//www.googletagmanager.com/gtag/js?id=UA-133308117-1"></script> --}}
