--- a/server/index.hbs
+++ b/server/index.hbs
@@ -36,7 +36,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="//{{assetDomain}}/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="//{{assetDomain}}/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="//{{assetDomain}}/favicon-16x16.png">
-  {{!-- <link rel="manifest" href="//{{assetDomain}}/site.webmanifest"> --}}
+  <link rel="manifest" href="//{{assetDomain}}/site.webmanifest">
   <link rel="mask-icon" href="//{{assetDomain}}/safari-pinned-tab.svg" color="#ffb0f5">
   <meta name="apple-mobile-web-app-title" content="Carpe Dalan">
   <meta name="application-name" content="Carpe Dalan">
